# GeradorDeRelatorio

./: README.md  main.py  makefile  pyproject.toml  pytest.ini  requirements.txt  vendas_exemplo.csv
src/: main.py
src/application/: app.py
src/domain/models/: models.py
src/infra/input/: input.py
src/infra/output/: output.py
tests/: conftest.py
tests/application/: test_application.py
tests/infra/input/: test_input.py
tests/infra/output/: test_output.py
